# nektar-diffusion-ambipolar

./: CMakeLists.txt  Dockerfile  README.md  run.sh
.github/workflows/: ci.yml
docs/: CMakeLists.txt  document.aux  document.bbl  document.blg  document.toc  references.bib
docs/figure/: document.tex  notes.txt
docs/figures/: CMakeLists.txt
example/: square-quads.xml
example/MASTU/: BFI.pts  FirstOpen.pts  LowerOuter.pts  ambipol.xml  core.pts  mastu.xml  omp.pts
example/Steady_0Ang/: conditions.xml  domain.xml
example/Steady_0Ang_full_matrix/: conditions.xml
example/Steady_0Ang_matrix_free/: conditions.xml
example/Steady_2Ang/: conditions.xml  domain.geo  domain.msh  domain.xml
example/Steady_2Ang_full_matrix/: conditions.xml
example/Steady_2Ang_matrix_free/: conditions.xml
example/Torus/: conditions.xml  domain.geo
example/Torus_matrix_free/: conditions.xml
example/Unsteady_0Ang/: conditions.xml  domain.xml
example/Unsteady_0Ang_full_matrix/: conditions.xml
example/Unsteady_0Ang_matrix_free/: conditions.xml
example/Unsteady_2Ang/: conditions.xml  domain.geo  domain.xml
example/Unsteady_2Ang_full_matrix/: conditions.xml
example/Unsteady_2Ang_matrix_free/: conditions.xml
example/Unsteady_ring/: ambipol.xml  column.xml
src/: DiffusionSolver.cpp  SteadyDiffusion.cpp  SteadyDiffusion.h  SteadyDiffusionVaryingB.cpp  SteadyDiffusionVaryingB.h  UnsteadyDiffusion.cpp  UnsteadyDiffusion.h
